# hitchhikers-guide-to-the-archive

./: .gitignore  README.md  app.py  app_ollama.py  crawl.py  index.csv  ingest.py  ingest_from_jsonl.py  ingest_from_jsonl_ollama.py  main.py  mast_docs_chunks.jsonl  pyproject.toml  render.yaml  render_readme.md  requirements.render.txt  requirements.txt  rest_api_ext.py  scrape.py
chroma_db/: chroma.sqlite3  chroma2.sqlite3
hack_llm/: pyvenv.cfg
mast_docs/: http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT9059R.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT90C72.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT90K5C.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT91C7C.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT92308.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT92C7P.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT93029.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT9388B.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT93M48.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT93W28.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT94590.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT9488N.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT95306.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT95S37.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT9630H.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT9730T.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT97P46.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT97W2H.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT98304.md  http___archive.stsci.edu_doi_resolve_resolve.html_doi_10.17909_2FT98D6H.md  (+795 more)
(+142 files in other folders)
