[project]
name = "hitchhikers-guide-to-the-archive"
version = "0.1.0"
description = "RAG AI pipeline for the MAST Archive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "crawl4ai>=0.8.0",
    "flask>=3.1.3",
    "google-api-core",
    "google-genai>=1.66.0",
    "langchain-text-splitters>=1.1.1",
    "llama-index>=0.12.52",
    "llama-index-core>=0.12.52.post1",
    "llama-index-embeddings-google-genai>=0.2.1",
    "llama-index-llms-google-genai>=0.2.6",
    "llama-index-vector-stores-chroma>=0.4.2",
    "pandas>=3.0.1",
    "tenacity>=9.1.4",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
